--- a/gb/16/11/14/n8492730.md
+++ b/gb/16/11/14/n8492730.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wpzlzr333/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/wpzlzr333/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/wpzlzr333/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wpzlzr333/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wpzlzr333/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wpzlzr333/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wpzlzr333/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wpzlzr333/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>节电竞赛 落实节电措施</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/11/230578_medium-e1479125969355-600x358.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元2016年11月14日讯】（大纪元记者陈文敏台湾苗栗报导）苗县府近年积极办理各项节电工作，包括由机关落实节电措施、广办各类<ahref="https://github.com/wpzlzr333/djy/blob/master/gb/tag/%E8%8A%82%E7%94%B5%E5%AE%A3%E5%AF%BC.md#1">节电宣导</a>以及暨节能设备汰换补助…等，期望能够落实全民参与；“夏月有你 节电有礼”绩优奖项颁奖典礼，14日上午在县府第一办公大楼1楼大厅举办，希望透过节约电能，让电源用到更多有用的地方。</p>
-<p>“夏月有你 节电有礼”<ahref="https://github.com/wpzlzr333/djy/blob/master/gb/tag/%E8%8A%82%E7%94%B5%E7%AB%9E%E8%B5%9B.md#1">节电竞赛</a>活动，从6月20日起至10月20日结束，11月14日在县府大厅办理颁奖典礼；该竞赛分为累积最高节电量得奖用户及平均最高节电率得奖用户，竞赛结果总累积节电量达24384度，平均节电率约有25.9%，竞赛各取前32名共64名参赛者获奖，由蔡昀叡的节电率85.85%及杨世华的节电量1962度夺得两项竞赛的头筹，各获得60吋LED节能电视机1部。</p>
+<p>【大纪元2016年11月14日讯】（大纪元记者陈文敏台湾苗栗报导）苗县府近年积极办理各项节电工作，包括由机关落实节电措施、广办各类<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8A%82%E7%94%B5%E5%AE%A3%E5%AF%BC.md#1">节电宣导</a>以及暨节能设备汰换补助…等，期望能够落实全民参与；“夏月有你 节电有礼”绩优奖项颁奖典礼，14日上午在县府第一办公大楼1楼大厅举办，希望透过节约电能，让电源用到更多有用的地方。</p>
+<p>“夏月有你 节电有礼”<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8A%82%E7%94%B5%E7%AB%9E%E8%B5%9B.md#1">节电竞赛</a>活动，从6月20日起至10月20日结束，11月14日在县府大厅办理颁奖典礼；该竞赛分为累积最高节电量得奖用户及平均最高节电率得奖用户，竞赛结果总累积节电量达24384度，平均节电率约有25.9%，竞赛各取前32名共64名参赛者获奖，由蔡昀叡的节电率85.85%及杨世华的节电量1962度夺得两项竞赛的头筹，各获得60吋LED节能电视机1部。</p>
 <p>活动中颁发包括：LED节能电视、万元及仟元商品礼券等好奖，表彰县辖内各乡镇参与学员，对落实参与生活节电培训的热诚，同时也期许各学员能够成为种子，将各种生活节电概念及作法带回各自生活圈，进而扩大宣导生活节电的重要性。</p>
 <p>环保节能志工林美兰表示，家中除了随手关灯外、电器用品除了冰箱外所有电器使用完都要拔除插头、定期清洗冷气机滤网、冷气温度不要太低且设定两小时关机、神明灯除改用LED灯外，非节庆时也不需开启、并把开饮机改成电汤匙、电脑不用就关机等，就能省下很多电量，不但节能省电还能省钱，真是一举数得。</p>
 <p>会中秘书长陈斌山与台电苗栗区处陈处长共同表彰并颁发县内认购绿色电力企业大户感谢状，表扬企业以实际行动响应环保，推动绿能善尽社会责任的决心。</p>
 <p>近年气候极端异常，在全球暖化的影响下，极端气候将更频繁的出现且加剧，节能减碳是全民应有的作为，而节电是其中一个手段，节电真的很简单，每日少吹一小时冷气、随手关电源、随手拔插头，夏日轻衫…等等，每日每人节一度电，共同为环境保护贡献一份心力。</p>
 <p>&nbsp;</p>
-<figure id="attachment_8492739" style="width: 300px" class="wp-caption aligncenter"><img class="size-small wp-image-8492739" src="https://i.epochtimes.com/assets/uploads/2016/11/230577_medium-300x178.jpg" alt="感谢认购绿电绩优厂商京元电子、中强光电与广源造纸。（许享富 /大纪元）" width="300" b="178" /><figcaption class="wp-caption-text">感谢认购绿电绩优厂商京元电子、中强光电与广源造纸。（许享富 /大纪元）</figcaption></figure>
-<figure id="attachment_8492741" style="width: 300px" class="wp-caption aligncenter"><img class="size-small wp-image-8492741" src="https://i.epochtimes.com/assets/uploads/2016/11/230579_medium-300x357.jpg" alt="苗栗县6-9月机关部门节电率，一年夏季达1.55%。（许享富 /大纪元）" width="300" b="357" /><figcaption class="wp-caption-text">苗栗县6-9月机关部门节电率，一年夏季达1.55%。（许享富 /大纪元）</figcaption></figure>
+<figure id="attachment_8492739" aria-describedby="caption-attachment-8492739" style="width: 300px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/11/230577_medium-300x178.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-small wp-image-8492739" src="https://i.epochtimes.com/assets/uploads/2016/11/230577_medium-300x178.jpg" alt="感谢认购绿电绩优厂商京元电子、中强光电与广源造纸。（许享富 /大纪元）" width="300" b="178" /></a><figcaption id="caption-attachment-8492739" class="wp-caption-text">感谢认购绿电绩优厂商京元电子、中强光电与广源造纸。（许享富 /大纪元）</figcaption></figure>
+<figure id="attachment_8492741" aria-describedby="caption-attachment-8492741" style="width: 300px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/11/230579_medium-300x357.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-small wp-image-8492741" src="https://i.epochtimes.com/assets/uploads/2016/11/230579_medium-300x357.jpg" alt="苗栗县6-9月机关部门节电率，一年夏季达1.55%。（许享富 /大纪元）" width="300" b="357" /></a><figcaption id="caption-attachment-8492741" class="wp-caption-text">苗栗县6-9月机关部门节电率，一年夏季达1.55%。（许享富 /大纪元）</figcaption></figure>
 <p>&nbsp;</p>
 <p>责任编辑：陈真</p>
 
@@ -21,48 +21,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/6/22/n8023406.md#1">小动作可省大钱 夏日节电大作战</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/6/22/n8023430.md#1">智慧电表可节电？台立委以塑身衣妙喻</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/6/23/n8029474.md#1">高市议会节电12招 1年半省400万</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/7/27/n8142910.md#1">新北节电参与式竞赛 奖励金达500万元</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/8/10/n8188385.md#1">桃园市节电率达0.22% 持续推动节电</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/9/20/n8319606.md#1">嘉义县节电竞赛 六脚及梅山乡获奖</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/10/1/n8356613.md#1">宜兰在地节电运动从住宅节能管理作起</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/7/n12601163.md#1">竹科飞越40 庆祝活动14、15日重磅登场</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/7/n12600936.md#1">“胜兴365”青年创业基地揭牌  鼓励青年返乡</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/7/n12600626.md#1">客语日历成果发表  营造客语友善环境</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/22/n8023406.md#1">小动作可省大钱 夏日节电大作战</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/22/n8023430.md#1">智慧电表可节电？台立委以塑身衣妙喻</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/6/23/n8029474.md#1">高市议会节电12招 1年半省400万</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/7/27/n8142910.md#1">新北节电参与式竞赛 奖励金达500万元</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/10/n8188385.md#1">桃园市节电率达0.22% 持续推动节电</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/9/20/n8319606.md#1">嘉义县节电竞赛 六脚及梅山乡获奖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/10/1/n8356613.md#1">宜兰在地节电运动从住宅节能管理作起</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615941.md#1">徐耀昌走访铜锣窑青年创业基地 体验DIY</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613400.md#1">1966 长照服务伴你左右</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613360.md#1">头屋乡举办植树节活动 4千株树苗免费索取</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/1/n10446785.md#1" target="_blank">共产暴政录：从船王卢作孚自杀看中共劫财手段</a></li><li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11281560.md#1" target="_blank">加拿大魁北克庆法轮大法日 市长议员祝贺</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004515.md#1" target="_blank">揭秘“四一二反革命政变”的历史真相（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/11/28/n12581077.md#1">前世今生一个女人两度转变他的人生</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/11/27/n12580382.md#1">刘伯温说寓言 如何面对权术威胁</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/1/n12588670.md#1">姜子牙之女做王后 历经千年贤名传</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/11/19/n12560430.md#1">但丁《神曲》故事：欺诈——毒害世界的怪物</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/4/n12596113.md#1">【馨香雅句】开启中国服饰文化的竟是她</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/7/n12601669.md#1">【微视频】川普决心很重要 拆穿拜登“国王新衣”</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/4/n12596707.md#1">【有冇搞错】当暴政降临 美国人有权武装反抗</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/5/n12597744.md#1">【西岸观察】舞弊视频主角现身 乔州州长变脸</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/5/n12597744.md#1">【西岸观察】舞弊视频主角现身 乔州州长变脸</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/5/n12598608.md#1">红三代当吹哨人 证明中国产假选票混入美国</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/5/n12598306.md#1">【特稿】拨乱反正 宪法赋予总统特别权力</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/4/n12597136.md#1">走红毯冻到下巴发抖 孟美岐反问一句登热搜</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/4/n12596927.md#1">传刘德华8岁女儿住院 朱丽倩陪同现身心脏科</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/7/n12600656.md#1">Sana曾与确诊者请夏接触 TWICE全员接受检疫</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/4/n12596670.md#1">杜汶泽赴台拍新节目 介绍移民方式给香港手足</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/5/n12598104.md#1">李翊君演唱会星光云集 黄子佼助阵献上惊喜</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/4/n12595215.md#1">按摩脚底2部位 远离失智症！大脑脊椎一起保养</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/7/n12600354.md#1">神秘金属柱子如雨后春笋 英国小岛也出现了</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/3/n12594410.md#1">忧郁症有4大症状 怎样改善？治疗和饮食全图解</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/2/n12590408.md#1">生姜别直接吃？国际药膳师：蒸一下功效更强</a></li>
-<li><a href="https://github.com/wpzlzr333/djy/blob/master/gb/20/12/5/n12598435.md#1">美医师：你该接种新冠疫苗吗？很多人没想过的事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wpzlzr333/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wpzlzr333/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/14/n8492730.htm">节电竞赛 落实节电措施</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/14/n8492730.htm">节电竞赛 落实节电措施</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wpzlzr333/djy/blob/master/gb/16/11/14/n8492730.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wpzlzr333/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wpzlzr333/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wpzlzr333/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wpzlzr333/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/16/11/14/n8492730.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
